testdata/baselines/reference/submodule/compiler/jsFileMethodOverloads3.errors.txt
/a.js(2,5): error TS7012: This overload of 'id' lacks a return-type annotation and implicitly has an 'any' return type.
/a.js(7,5): error TS7012: This overload of 'id' lacks a return-type annotation and implicitly has an 'any' return type.


==== /a.js (2 errors) ====
    /**
     * @overload
        ~~~~~~~~
!!! error TS7012: This overload of 'id' lacks a return-type annotation and implicitly has an 'any' return type.
     * @param {number} x
     */
    
    /**
     * @overload
        ~~~~~~~~
!!! error TS7012: This overload of 'id' lacks a return-type annotation and implicitly has an 'any' return type.
     * @param {string} x
     */
    
    /**
     * @param {string | number} x
     * @returns {string | number}
     */
    function id(x) {
        return x;
    }
    
    export let a = id(123);
    export let b = id("hello");
    